--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
          <h1><samp id="name-color">Hridoy</samp> website</h1>
          <h3>Become a best developer</h3>
          <p class="paragraph">In 1947, East Bengal became the most populous province in the Dominion of Pakistan. It was renamed as East Pakistan with Dhaka becoming the country's legislative capital. The Bengali Language Movement in 1952; the East Bengali legislative election, 1954; the 1958 Pakistani coup d'état; the Six point movement of 1966; and the 1970 Pakistani general election resulted in the rise of Bengali nationalism and pro-democracy movements in East Pakistan</p>
-    </div>   
+          <a class="link-button" target="_blank" href="http://www.google.com">HEIR ME</a>
+     </div>
+
     <div class="half-width">
         <img src="/images/jhankar.png">
     </div>
