--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="top-banner">
      <div class="half-width">
          <h1>Welcome Too</h1>
-         <h1><samp id="name-color">Hridoy</samp> website</h1>
+         <h1><samp class="name-color">Hridoy</samp> website</h1>
          <h3>Become a best developer</h3>
          <p class="paragraph">In 1947, East Bengal became the most populous province in the Dominion of Pakistan. It was renamed as East Pakistan with Dhaka becoming the country's legislative capital. The Bengali Language Movement in 1952; the East Bengali legislative election, 1954; the 1958 Pakistani coup d'état; the Six point movement of 1966; and the 1970 Pakistani general election resulted in the rise of Bengali nationalism and pro-democracy movements in East Pakistan</p>
           <a class="link-button" target="_blank" href="http://www.google.com">HEIR ME</a>
@@ -21,5 +21,37 @@
         <img src="/images/jhankar.png">
     </div>
 >   </section>
+
+   <section class="dream-area">
+      <div class="half-width">
+        <img src="/images/jhankar2.png">
+      </div>
+      <div class="half-width">
+          <h1>Dream Big</h1>
+          <h2 class="name-color">Become world best developer</h2>
+          <p>In 1947, East Bengal became the most populous province in the Dominion of Pakistan. It was renamed as East Pakistan with Dhaka becoming the country's legislative capital. The Bengali Language Movement in 1952; the East Bengali legislative election, 1954; the 1958 Pakistani coup d'état; the Six point movement of 1966; and the 1970 Pakistani general election resulted in the rise of Bengali nationalism and pro-democracy movements in East Pakistan</p>
+          <a class="link-button" target="_blank" href="http://www.google.com">VISIT MY FACEBOOK</a>
+      </div>
+   </section>
+
+   <section class="exprience-area">
+     <h1>Expriencessss</h1>
+      <div id="full-stack" class="half-width single-exprience">
+         <h1>Baby web developer</h1>
+         <h2 class="name-color">2022-007|Progreming Hero Lernes</h2>
+         <p>Bangladesh forms the sovereign part of the historic and ethnolinguistic region of Bengal, which was divided during the Partition of India in 1947.[17] The country has a Bengali Muslim majority. Ancient Bengal was an important cultural centre in the Indian subcontinent as the home of the states of Vanga, Pundra, Gangaridai, Gauda, Samatata, and Harikela. The Mauryan, Gupta, Pala, Sena, Chandra and Deva dynasties were the last pre-Islamic rulers of Bengal.</p>
+      </div>
+      <div id="bal-stack" class="half-width single-exprience">
+         <h1>Pro level web developer</h1>
+         <h2 class="name-color">2023-2024|Work my own company</h2>
+         <p>Bangladesh forms the sovereign part of the historic and ethnolinguistic region of Bengal, which was divided during the Partition of India in 1947.[17] The country has a Bengali Muslim majority. Ancient Bengal was an important cultural centre in the Indian subcontinent as the home of the states of Vanga, Pundra, Gangaridai, Gauda, Samatata, and Harikela. The Mauryan, Gupta, Pala, Sena, Chandra and Deva dynasties were the last pre-Islamic rulers of Bengal.</p>
+      </div>
+      
+   </section>
+
+    <footer>
+        <p>we are the best person in the world</p>
+    </footer>
+
 </body>
 </html>
